checker deselect not behaving correctly with edge selections #40324

Closed
opened 2014-05-22 23:46:39 +02:00 by Sir Torx Screwdriver · 8 comments

System Information
Operating system and graphics card

Blender Version
recent version from buildbot nightly builds
hash: 85398de

Short description of error

using checker deselect with an edge selecting doesn't appear to behave as it should

Exact steps for others to reproduce the error

add a new cylinder (can have ngon/tri caps or none doesn't matter for this)
go into edit mode
switch over to edge select mode
select all vertical edges as seen in this screenshot
Screenshot_(5).jpg
now hit select>checker deselect (or [space] & type "chec...")

nothing is getting deselected.
if I change the offset in the [F6] menu one edge loop get's deselected

I noticed that if the selected edge loops are connected, everything actually works as expected Screenshot_(6).jpg

thanks for your time :)

**System Information** Operating system and graphics card **Blender Version** recent version from buildbot nightly builds hash: 85398de **Short description of error** using checker deselect with an edge selecting doesn't appear to behave as it should **Exact steps for others to reproduce the error** add a new cylinder (can have ngon/tri caps or none doesn't matter for this) go into edit mode switch over to edge select mode select all vertical edges as seen in this screenshot ![Screenshot_(5).jpg](https://archive.blender.org/developer/F89747/Screenshot__5_.jpg) now hit select>checker deselect (or [space] & type "chec...") nothing is getting deselected. if I change the offset in the [F6] menu one edge loop get's deselected I noticed that if the selected edge loops are connected, everything actually works as expected ![Screenshot_(6).jpg](https://archive.blender.org/developer/F89750/Screenshot__6_.jpg) thanks for your time :)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @particleemitter

Added subscriber: @particleemitter
Campbell Barton was assigned by Sergey Sharybin 2014-05-23 10:25:31 +02:00

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey

I'm not sure it's supposed to work. @ideasman42, mind having a look? :)

I'm not sure it's supposed to work. @ideasman42, mind having a look? :)

This issue was referenced by bec8cee7cf

This issue was referenced by bec8cee7cf1c7b980c86298af430dbfaf1b7ed7e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bec8cee7cf.

Closed by commit bec8cee7cf.

This is feature request really, but we had this reported before and its useful functionality.

This is feature request really, but we had this reported before and its useful functionality.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40324
No description provided.