Fix T40324: Checker deselect fails for edge-rings